added pagination and filtering for customers