@@ -6,9 +6,13 @@ import com.alexander.orderflow.customer.dto.CustomerPatchRequest;
 import com.alexander.orderflow.customer.entity.Customer;
 import com.alexander.orderflow.customer.mapper.CustomerMapper;
 import com.alexander.orderflow.customer.service.CustomerService;
+import com.alexander.orderflow.product.dto.PagedResponse;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -48,13 +52,26 @@ public class CustomerController {
     }
 
     @GetMapping
-    @Operation(summary = "Get all Customers")
-    public ResponseEntity<List<CustomerResponse>> getAllCustomers() {
-        List<CustomerResponse> responses = service.getAllCustomers()
-                .stream()
+    @Operation(summary = "Get paginated list of customers")
+    public ResponseEntity<PagedResponse<CustomerResponse>> getAllCustomers(
+            @PageableDefault(page = 0, size = 10, sort = "lastName") Pageable pageable
+    ) {
+        Page<Customer> customerPage = service.getAllCustomers(pageable);
+
+        List<CustomerResponse> content = customerPage.getContent().stream()
                 .map(mapper::toResponse)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responses);
+                .toList();
+
+        PagedResponse<CustomerResponse> response = new PagedResponse<>(
+                content,
+                customerPage.getNumber(),
+                customerPage.getSize(),
+                customerPage.getTotalElements(),
+                customerPage.getTotalPages(),
+                customerPage.isLast()
+        );
+
+        return ResponseEntity.ok(response);
     }
 
     @PutMapping("/{id}")
